# abcpp

./: CMakeLists.txt  README  graph.cpp  graph.h  graphanalysis.cpp  graphanalysis.h  makefile
inc/: graph.h  graphanalysis.h  issbase.h
src/: graph.cpp  graphanalysis.cpp  issbase.cpp
tests/: main.cpp  makefile
tests/bfscheck/: bfscheck  main.cpp  makefile
tests/cycliccheck/: main.cpp  makefile
